--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE htm>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -9,11 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta http-equiv="Content-Security-Policy" content="
-      script-src 'self' https://js.stripe.com https://www.youtube.com;
-      frame-src 'self' https://js.stripe.com https://maps.google.com/ https://www.google.com/ https://www.youtube.com;
-      img-src 'self' https://hamart-shop.vercel.app data: https://lh3.googleusercontent.com http://localhost:4000;
-    ">
+
+     <meta http-equiv="Content-Security-Policy"
+                    content="
+                    script-src 'self' https://js.stripe.com https://www.youtube.com;
+                    frame-src 'self' https://js.stripe.com https://maps.google.com/ https://www.google.com/ https://www.youtube.com;
+                    img-src 'self' https://hamart-shop.vercel.app http://13.53.130.110 data: https://lh3.googleusercontent.com http://localhost:4000;
+                                             "/>
       <link rel="manifest" href="/manifest.json" />
     <link
       rel="stylesheet"
