--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,12 +10,13 @@
       content="Web site created using create-react-app"
     />
 
-     <meta http-equiv="Content-Security-Policy"
-                    content="
-                    script-src 'self' https://js.stripe.com https://www.youtube.com;
-                    frame-src 'self' https://js.stripe.com https://maps.google.com/ https://www.google.com/ https://www.youtube.com;
-                    img-src 'self' https://hamart-shop.vercel.app http://13.51.207.9 data: https://lh3.googleusercontent.com http://localhost:4000;
-                                             "/>
+    <meta http-equiv="Content-Security-Policy"
+    content="
+    script-src 'self' http://13.51.207.9 https://js.stripe.com https://www.youtube.com;
+    frame-src 'self' http://13.51.207.9 https://js.stripe.com https://maps.google.com/ https://www.google.com/ https://www.youtube.com;
+    img-src 'self' https://hamart-shop.vercel.app data: http://13.51.207.9 https://lh3.googleusercontent.com http://localhost:4000;
+     "/>
+ 
       <link rel="manifest" href="/manifest.json" />
     <link
       rel="stylesheet"
