update html index

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,11 +5,7 @@
     <link rel="icon" href="/Fiti.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
- 
+    <meta name="description" content="Bienvenue sur Fitifash, votre destination unique pour les dernières tendances en matière de mode fitness et d'accessoires. Parcourez notre collection de vêtements de sport, de vêtements de sport et d'accessoires de gym pour commencer votre parcours fitness avec style !" />
       <link rel="manifest" href="/manifest.json" />
     <link
       rel="stylesheet"
@@ -25,7 +21,7 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-    <title>Fiti</title>
+    <title>Fitifash - Mode Fitness</title>
     <script src="https://js.stripe.com/v3/" defer></script>
     <!-- Your other scripts and stylesheets -->
     <script defer="defer" src="/static/js/main.db262573.js"></script>
